fixed weird horizontal scroll on blog section

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -26,7 +26,7 @@ img {
 
 .wrapper {
     max-width: 1350px;
-    width: 85%;
+    width: 90%;
     margin: 0 auto;
     // border: 2px solid red;
 }
