--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -26,7 +26,6 @@
         }
         
         .articleTextContainer {
-            width: 700px;
             padding: 50px 0;
         }
     }
